# WatchedIt

./: .gitignore  API_URL_IMPROVEMENT.md  CLOUD_SYNC_GUIDE.md  COLOR_CONTRAST_UPDATE_SUMMARY.md  COLOR_STYLE_UNIFICATION_SUMMARY.md  CSS_COLOR_CONSISTENCY_SUMMARY.md  CSS_COLOR_CONSISTENCY_UPDATE_SUMMARY.md  CSS_SHARED_CLASSES_GUIDE.md  CSS_SHARED_CLASSES_IMPLEMENTATION_SUMMARY.md  DARK_MODE_AUTO_FIX_SUMMARY.md  DARK_MODE_TEXT_UPDATE_SUMMARY.md  DEMO_WORKS_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EPISODE_MANAGER_FIX_SUMMARY.md  EPISODE_MANAGER_TEXT_COLOR_FIX_SUMMARY.md  EPISODE_SCROLL_AND_UPDATE_FIX.md  GAME_TYPE_DISABLED_SUMMARY.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  ICON_CLEANUP_SUMMARY.md  INDEXEDDB_MIGRATION.md  PWA_FIRST_TIME_INSTALL.md  PWA_INSTALL_SUMMARY.md  README.md  README.zh-TW.md  RECENT_WORKS_SORTING_FIX.md  RWD_FIX_SUMMARY.md  SETTINGS_DARK_MODE_UPDATE_SUMMARY.md  SETUP_COMPLETE.md  STATUS_TEXT_UPDATE_SUMMARY.md  TAG_MANAGER_TEXT_COLOR_FIX_SUMMARY.md  TESTING.md  TESTING_SUMMARY.md  TEXT_COLOR_CONTRAST_FIX_SUMMARY.md  TEXT_COLOR_UNIFICATION_SUMMARY.md  UX_IMPROVEMENTS.md  WORK_TYPE_EPISODE_MAPPING_SUMMARY.md  WORK_TYPE_INTEGRATION_SUMMARY.md  check-deployment.sh  (+15 more)
404/: index.html
backend/: Dockerfile  __init__.py  pytest.ini  requirements.txt
docs/: DOCUMENTATION_SUMMARY.md  README.md  USER_MANUAL.md
episode-test/: index.html  index.txt
frontend/: .vercelignore  DEPLOYMENT.md  Dockerfile  FAVICON_SETUP.md  FAVICON_UPDATE.md  GITHUB_LINKS_ADDED.md  ICON_FIX.md  ICON_UPDATE_COMPLETE.md  SAMPLE_DATA_FIX.md  env.example  jest.config.js  (+9 more)
(+264 files in other folders)
